<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kernel Tuner</string>
    <string name="oc">CPU Tweaks</string>
    <string name="preferences_boot_settings">Boot Settings</string>
    <string name="preferences_boot_settings_apply_summary">Setings will be restored after reboot</string>
    <string name="preferences_boot_settings_apply_title">Restore settings on boot</string>
    <string name="preferences_widget_settings">Widget Settings</string>
    <string name="preferences_widget_settings_interval_title">Widget Update Interval(seconds)</string>
    <string name="preferences_widget_settings_interval_summary">Setting to low values will cause your battery to drain faster</string>
    <string name="preferences_misc">Misc</string>
    <string name="preferences_misc_cpu_info_title">CPU Info Override</string>
    <string name="preferences_misc_cpu_info_summary">Use if CPU progress isn\&apos;t shown correctly</string>
    <string name="preferences_misc_ads_title">Show ads on main screen</string>
    <string name="preferences_misc_ads_summary">You need to restart app to stop showing ads</string>
    <string name="preferences_misc_temp_title">Temperature in Fahrenheit</string>
    <string name="preferences_misc_temp_summary">Display temperature of CPU and battery in Fahrenheit</string>
    <string name="preferences_ui">UI</string>
    <string name="preferences_ui_theme_title">Application Theme</string>
    <string name="preferences_ui_theme_summary">Theme for application interface</string>
    <string name="activity_title_preferences">Preferences</string>
    <string name="activity_title_cpu">CPU Tweaks</string>
    <string name="activity_title_gpu">GPU Tweaks</string>
    <string name="activity_title_misc">Misc Tweaks</string>
    <string name="activity_title_times">Times in State</string>
    <string name="activity_title_voltage">Voltage</string>
    <string name="activity_title_mpdecision">Mpdecision</string>
    <string name="activity_title_thermald">Thermald</string>
    <string name="activity_title_about">About</string>
    <string name="activity_title_changelog">Changelog</string>
    <string name="activity_title_anthrax">Anthrax Tweaks</string>
    <string name="activity_title_check">Compatibility Check</string>
    <string name="activity_title_profiles">Profiles</string>
    <string name="activity_title_profile_editor">Profile Editor</string>
    <string name="anthrax"><a href="http://anthrax-kernels.us/forum/showthread.php?t=574">anthrax-kernels.us</a></string>
    <string name="xda"><a href="http://forum.xda-developers.com/showthread.php?t=1719934">xda-developers.com</a></string>
    <string name="official"><a href="http://kerneltuner.co.cc/">Official Website</a></string>

    <color name="green">#00ff00</color>

    <string name="copyright_cokulov_predrag_2012">Copyright © Čokulov Predrag 2012</string>
    <string name="about_faq_and_support">FAQ and Support:</string>
    <string name="activity_anthrax_button_thermald">thermald</string>
    <string name="activity_anthrax_button_mpdecision">mpdecision</string>
    <string name="activity_anthrax_button_other">Other</string>
    <string name="activity_check_scaling_available_frequencies">scaling_available_frequencies...</string>
    <string name="activity_check_undervolting_">Undervolting...</string>
    <string name="activity_check_time_in_state_">Time in State...</string>
    <string name="activity_check_led_notification_timeout_">LED Notification Timeout...</string>
    <string name="activity_check_capacitive_buttons_backlight_">Capacitive Buttons Backlight...</string>
    <string name="activity_check_gpu_3d_overclocking_">GPU 3D Overclocking...</string>
    <string name="activity_check_gpu_2d_overclocking">GPU 2D Overclocking</string>
    <string name="activity_check_fastcharge_">Fastcharge...</string>
    <string name="activity_check_vsync_">Vsync...</string>
    <string name="activity_check_color_depth_">Color Depth...</string>
    <string name="activity_check_f_sync_">f/sync...</string>
    <string name="activity_check_sweep2wake_">Sweep2Wake...</string>
    <string name="activity_check_thermald_">Thermald...</string>
    <string name="activity_check_mpdecision_">Mpdecision...</string>
    <string name="activity_check_sdcache_">sdcache....</string>
    <string name="activity_check_io_scheduler_">IO Scheduler...</string>
    <string name="activity_check_your_device_is_">"Your device is "</string>
    <string name="activity_check_compatible_">" compatible!"</string>
    <string name="activity_check_button_ok">OK</string>
    <string name="activity_main_times_in_state">Times in State</string>
    <string name="activity_main_voltage">Voltage</string>
    <string name="activity_main_gpu_tweaks">GPU Tweaks</string>
    <string name="activity_main_misc_tweaks">Misc Tweaks</string>
    <string name="activity_main_anthrax_tweaks">Anthrax Tweaks</string>
    <string name="activity_main_cpu_temp_">CPU Temp:</string>
    <string name="activity_main_n_a">n/a</string>
    <string name="activity_main__battery_temp_">" Battery Temp:"</string>
    <string name="activity_main__battery_level_">" Battery Level:"</string>
    <string name="cpu0">CPU0</string>
    <string name="cpu1">CPU1</string>
    <string name="activity_main_offline">offline</string>
    <string name="cpu2">CPU2</string>
    <string name="cpu3">CPU3</string>
    <string name="info_">Info:</string>
    <string name="cpu0_min_freq_">CPU0 min freq:</string>
    <string name="cpu0_max_freq_">CPU0 max freq:</string>
    <string name="cpu1_min_freq_">CPU1 min freq:</string>
    <string name="cpu2_min_freq_">CPU2 min freq:</string>
    <string name="cpu1_max_freq_">CPU1 max freq:</string>
    <string name="cpu2_max_freq_">CPU2 max freq:</string>
    <string name="cpu3_min_freq_">CPU3 min freq:</string>
    <string name="crtica">-</string>
    <string name="cpu3_max_freq_">CPU3 max freq:</string>
    <string name="activity_main_fastcharge_status_">Fastcharge status:</string>
    <string name="activity_main_softbuttons_light_level_">Softbuttons light level:</string>
    <string name="gpu2d_max_freq_">GPU2D freq:</string>
    <string name="gpu3d_max_freq_">GPU3D Max freq:</string>
    <string name="activity_main_vsync_">vsync:</string>
    <string name="cpu0_governor_">CPU0 governor</string>
    <string name="cpu1_governor_">CPU1 governor</string>
    <string name="cpu2_governor_">CPU2 governor</string>
    <string name="cpu3_governor_">CPU3 governor</string>
    <string name="activity_main_color_depth">Color Depth</string>
    <string name="activity_main_up_time_">Up-time:</string>
    <string name="activity_main_deep_sleep_">Deep sleep:</string>
    <string name="activity_main_io_scheduler_">IO  Scheduler:</string>
    <string name="activity_main_sd_cache_size_">SD Cache Size:</string>
    <string name="activity_main_sweep2wake_">Sweep2Wake:</string>
    <string name="activity_main_cpu1_on_off">CPU1 on/off</string>
    <string name="activity_main_cpu2_on_off">CPU2 on/off</string>
    <string name="activity_main_cpu3_on_off">CPU3 on/off</string>
    <string name="activity_gpu_3d_max_freq_">3D max freq:</string>
    <string name="activity_gpu_mhz">Mhz</string>
    <string name="activity_gpu__2d_max_freq_">2D max freq:</string>
    <string name="activity_gpu_current_3d_frequency_">Current 3D frequency:</string>
    <string name="activity_gpu_n_a">n/a</string>
    <string name="activity_gpu_current_2d_frequency_">Current 2D frequency:</string>
    <string name="cancel">Cancel</string>
    <string name="plus">+</string>
    <string name="activity_misc_soft_buttons_backlight">Capacitive Buttons Backlight</string>
    <string name="fastcharge">Fastcharge</string>
    <string name="enable_disable_fastcharge_mod">Enable/Disable Fastcharge Mod</string>
    <string name="vsync">Vsync:</string>
    <string name="enable_disable_vsync">Enable/Disable Vsync</string>
    <string name="question_mark">\\?</string>
    <string name="color_depth">Color Depth</string>
    <string name="io_scheduler_">IO Scheduler:</string>
    <string name="sd_cache_size_">SD Cache Size:</string>
    <string name="led_notofications_timeout">LED Notofications Timeout</string>
    <string name="unlimited">Unlimited</string>
    <string name="application_default">Application Default</string>
    <string name="app_default_custom_multiplier">App default * custom multiplier</string>
    <string name="sweep2wake_">Sweep2Wake:</string>
    <string name="s2w_start_button_">S2W Start Button;</string>
    <string name="s2w_end_button_">S2W End Button:</string>
    <string name="apply">Apply</string>
    <string name="mpdecision">mpdecision</string>
    <string name="service_start_delay_">Service start delay:</string>
    <string name="sleep_time_">Sleep time:</string>
    <string name="up_threshold_load_">Up threshold(load):</string>
    <string name="up_threshold_time_">Up threshold(time):</string>
    <string name="down_threshold_load_">Down threshold(load):</string>
    <string name="down_threshold_time_">Down threshold(time):</string>
    <string name="max">max</string>
    <string name="min">min</string>
    <string name="cpu0_governor_settings_">CPU0 Governor settings:</string>
    <string name="profile_name">Profile Name</string>
    <string name="number_of_active_cores_">Number of active Cores:</string>
    <string name="mpdecision_threshold_up_">mpdecision threshold up:</string>
    <string name="mpdecision_threshold_down_">mpdecision threshold down:</string>
    <string name="done">Done</string>
    <string name="profile_">Profile:</string>
    <string name="create_profile_from_current_settings">Create profile from current settings</string>
    <string name="phase1_low">Phase1-Low</string>
    <string name="max_frequency_">Max Frequency:</string>
    <string name="low_range_temperature_">Low range temperature:</string>
    <string name="high_range_temperature_">High range temperature:</string>
    <string name="phase2_medium">Phase2-Medium</string>
    <string name="phase3_high">Phase3-High</string>
    <string name="frequency_">Frequency:</string>
    <string name="all_p12_5mv">All +12.5mV</string>
    <string name="all_m12_5mv">All -12.5mV</string>
    <string name="mhz">Mhz</string>
    <string name="governor_">Governor:</string>
    <string name="buttons_n_light">Button Light</string>
    <string name="fast_ncharge">Fastcharge</string>
    <string name="color_n_depth">Color Depth</string>
    <string name="vsync_n_">Vsync</string>
    <string name="uptime_">Uptime:</string>
    <string name="deep_sleep">Deep Sleep</string>
    <string name="temperature_">Temperature:</string>
    <string name="voltage_">Voltage:</string>
    <string name="technology_">Technology:</string>
    <string name="drain_charge_">Drain/Charge:</string>
    <string name="health_">Health:</string>
    <string name="capacity_">Capacity:</string>
    <string name="n_a">n\a</string>
    <string name="swap_size">Swap Size(MB)</string>
    <string name="swap_location">Swap file location</string>
    <string name="swappiness">Swappiness</string>
    <string name="create_swap">Create Swap File</string>
    <string name="activate_swap">Activate Swap</string>
    <string name="swap_status">Swap Status</string>
    <string name="restore_on_reboot">Activate Swap after reboot</string>
    <string name="delete_swap">Delete Swap File</string>
     <string name="activity_title_swap">Swap Manager</string>
     <string name="activity_title_chart">Charts</string>
     <string name="deactivate_swap">Deactivate Swap</string>
     <string name="set_swappiness">Set Swappiness</string>

</resources>