<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
		
	<ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/textView1"
		android:layout_marginRight="45dp"
		android:layout_marginTop="15dp"
        android:src="@drawable/dual_on"
		/>
		
	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_toRightOf="@+id/textView1"
	    android:text="@string/app_name"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textSize="30dp" />
		
	<TextView
	    android:id="@+id/textView3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/textView2"
	    android:layout_toRightOf="@+id/textView1"
	    android:text="version: n/a"
	    android:textAppearance="?android:attr/textAppearanceLarge" />
		
	<TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
		android:layout_marginTop="5dp"
android:gravity="center"
		android:layout_centerHorizontal="true"
		android:text="Copyright © Čokulov Predrag 2012"
		android:autoLink="web"
		android:linksClickable="true"
	/>

	<TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
		android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="FAQ and Support:"/>
	
	<TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
		android:layout_marginTop="5dp"
		android:gravity="center"
		android:layout_centerHorizontal="true"
		android:text="@string/anthrax"
		
		android:linksClickable="true"
	
	/>
	
	<TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
		android:layout_marginTop="5dp"
		android:gravity="center"
		android:layout_centerHorizontal="true"
		android:text="@string/xda"

		android:linksClickable="true"

	/>
	
	
	<ImageView
        android:id="@+id/tux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
		android:layout_marginTop="20dp"
		android:gravity="center"
		android:layout_centerHorizontal="true"
		android:src="@drawable/tux_gandalf"

	/>
	
	<TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tux"
		android:layout_marginTop="5dp"
		android:gravity="center"
		android:layout_centerHorizontal="true"
		android:text="@string/official"
		android:linksClickable="true"

	/>
	
</RelativeLayout>
